@@ -1,3 +1,8 @@
+2019-03-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* bibtex-2.c: Check error status for every call of
+	u_strFromUTF8WithSub().
+
 2019-03-05  Akira Kakuto  <kakuto@w32tex.org>
 
 	* bibtex-2.c: Use u_strFromUTF8WithSub() with a substitution
